<resources>
    <string name="app_name">AppPizzeria_V03</string>

    <!--INICIO-->
    <string name="strTvInicio">INICIO</string>
    <string name="strBtnInitInicio">INICIAR SESIÓN</string>
    <string name="strBtnRegistrarseEnInicio">REGISTRARSE</string>

    <!--REGISTRO-->
    <string name="strTvRegistro">REGISTRO</string>
    <string name="strHintUsuarioRegistro">Usuario</string>
    <string name="strHintEmailRegistro">Email</string>
    <string name="strHintPassRegistro">Contraseña</string>
    <string name="strBtnGuardarRegistro">GUARDAR</string>

    <!--LOGIN-->
    <string name="strTvLogin">LOGIN</string>
    <string name="strHintUsuarioLogin">Usuario</string>
    <string name="strHintPassLogin">Contraseña</string>
    <string name="strBtnLogin">SIGUIENTE</string>
    <string name="strCheckLogin">Guardar usuario y contraseña</string>

</resources>
