<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI_Login">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/strTvLogin"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEdtUsuarioLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/strHintUsuarioLogin"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/idEdtPassLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/strHintPassLogin"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/idEdtUsuarioLogin"
        app:layout_constraintStart_toStartOf="@+id/idEdtUsuarioLogin"
        app:layout_constraintTop_toBottomOf="@+id/idEdtUsuarioLogin" />

    <Button
        android:id="@+id/idBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="onClicBtnLogin"
        android:text="@string/strBtnLogin"
        app:layout_constraintEnd_toEndOf="@+id/idEdtPassLogin"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/idEdtPassLogin"
        app:layout_constraintTop_toBottomOf="@+id/idEdtPassLogin" />

    <CheckBox
        android:id="@+id/idCheckBoxLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/strCheckLogin"
        app:layout_constraintStart_toStartOf="@+id/idEdtPassLogin"
        app:layout_constraintTop_toBottomOf="@+id/idBtnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>