<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI_Registro">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:text="@string/strTvRegistro"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEdtUsuarioGuiRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/strHintUsuarioRegistro"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/idEdtEmailGuiRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/strHintEmailRegistro"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/idEdtUsuarioGuiRegistro"
        app:layout_constraintStart_toStartOf="@+id/idEdtUsuarioGuiRegistro"
        app:layout_constraintTop_toBottomOf="@+id/idEdtUsuarioGuiRegistro" />

    <EditText
        android:id="@+id/idEdtPassGuiRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/strHintPassRegistro"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/idEdtEmailGuiRegistro"
        app:layout_constraintStart_toStartOf="@+id/idEdtEmailGuiRegistro"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEmailGuiRegistro" />

    <Button
        android:id="@+id/idBtnGuiRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="onClickGuardaRegistro"
        android:text="@string/strBtnGuardarRegistro"
        app:layout_constraintEnd_toEndOf="@+id/idEdtPassGuiRegistro"
        app:layout_constraintStart_toStartOf="@+id/idEdtPassGuiRegistro"
        app:layout_constraintTop_toBottomOf="@+id/idEdtPassGuiRegistro" />

</androidx.constraintlayout.widget.ConstraintLayout>